<resources>
    <string name="app_name">Heyla</string>
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="app_logo">App logo</string>
    <string name="facebook_app_id">323262168628257</string>
    <string name="fb_login_protocol_scheme">fb323262168628257</string>
    <string name="signup">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="confirm">Confirm</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="email">Email ID(Optional)</string>
    <string name="email_mandatory">Email ID</string>
    <string name="password">Password</string>
    <string name="mobileno">Mobile Number</string>
    <string name="mobileno_or_email">Mobile Number/Email ID</string>
    <string name="username">Username</string>
    <string name="usernameormail">Username/Email ID/Mobile Number</string>
    <string name="new_mobile_number">Mobile Number</string>
    <string name="newpassword">New Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="remember">Remember me</string>
    <string name="alternatelogin">Or</string>
    <string name="forgot">Forgot password?</string>
    <string name="verificationcode">Verification Code</string>
    <string name="mobile_number">New Mobile Number</string>
    <string name="verificationcodeforforgotpassword">Enter the OTP you have just received</string>
    <string name="didntrecievecode">Didn\'t receive the code?\t</string>
    <string name="entercodetxt">Enter the verification code \nsent to your mobile</string>
    <string name="no_connectivity">Please check your internet connectivity and try again</string>
    <string name="resend">Resend now</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="changenumber">Change number</string>
    <string name="error_occured">Failed to connect to the server. Please try again.</string>
    <string name="gps_network_not_enabled">Enable GPS</string>
    <string name="open_location_settings">Open location manager</string>
    <string name="Cancel">Cancel</string>
    <string name="get_started">Get Started</string>
    <string name="select_preference">Choose your preferences</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="skip">SKIP</string>
    <string name="start">DIVE IN</string>
    <string name="slide_1_title">Explore</string>
    <string name="slide_1_desc">Explore with just a few taps.\nThere\'s something for everyone.</string>
    <string name="slide_2_title">Engage</string>
    <string name="slide_2_desc">Click, engage, escape into\nthe world of events</string>
    <string name="slide_3_title">Experience</string>
    <string name="slide_3_desc">Unfold new experiences \nwith the stages of the city-state</string>
    <string name="err_email">Enter valid email ID</string>
    <string name="err_name">Enter valid name</string>
    <string name="err_review">Review cannot be empty</string>
    <string name="err_username">Enter valid username</string>
    <string name="err_min_username_length">Enter an username with at least 4 characters</string>
    <string name="err_password">Enter valid password</string>
    <string name="err_empty_username">Username can\'t be empty</string>
    <string name="err_mobile">Enter valid mobile phone number</string>
    <string name="err_empty_password">Give a new password to reset!</string>
    <string name="err_empty_password_login">Password can\'t be empty</string>
    <string name="err_min_pass_length">Short passwords are easy to guess! Try one with at least 6 characters</string>
    <string name="forgot_text">Please enter your registered mobile number to reset your password</string>
    <string name="reactivate_text">Please enter your registered mobile number or email to reactivate your account</string>
    <string name="alert_button_ok">OK</string>
    <string name="empty" />
    <string name="alert_button_cancel">Cancel</string>
    <string name="progress_loading">Loading&#8230;</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="occupation">Occupation</string>
    <string name="birthday">DOB</string>
    <string name="address1">Address (Line 1)</string>
    <string name="address2">Address (Line 2)</string>
    <string name="address3">Landmark (Optional)</string>
    <string name="selectcountry">Country</string>
    <string name="selectstate">State</string>
    <string name="selectcity">City</string>
    <string name="pincode">Pincode</string>
    <string name="recieve_notification">Newsletter</string>
    <string name="save">Save</string>
    <string name="access_code">Access Code</string>
    <string name="pay_now_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="payment_heading">Payment Policy</string>
    <string name="payment_heading1">General Pricing</string>
    <string name="payment_heading2">Heyla Event Service Charge: 2%</string>
    <string name="payment_heading3">Payment Gateway Charge: 1.99%</string>
    <string name="payment_heading4">Total: 4.71% (Total 3.99% +18%GST)</string>
    <string name="payment_heading5">Payment Confirmation</string>
    <string name="payment_heading6">Refund / Cancellation / Exchanges</string>
    <string name="payment_heading7">Customer Care</string>
    <string name="payment_heading8">Changes on Pricing</string>
    <string name="payment_content">Heyla accepts Visa, MasterCard, American Express, selected Credit &amp; Debit Cards and Net Banking. Other payment methods may be added from time to time. We process our payments through one97 Communication Limited. Users are subject to internet-handling fees and a non-refundable, processing fees per ticket.\n\n         Heyla acts as an agent to promote the events and sell tickets on behalf of the event organizers. We do not hold any control on the availability and pricing of the tickets.</string>
    <string name="payment_content1"> </string>
    <string name="payment_content2"> </string>
    <string name="payment_content3"> </string>
    <string name="payment_content4">Ex: Your event ticket is 100. Final payout after deduction of payment gateway fee + taxes = (100 x 4.71) / 100 = INR 95.29\nNote: Payments would be processed in 3 to 5 working days after the completion of the event</string>
    <string name="payment_content5">Once your payment is successful, you will be directed to the confirmation page which will contain all the details regarding your order. You will also receive a text message and email regarding your order confirmation. If you do not receive a confirmation or experience an error during payments, contact the customer care regarding your order. We are not liable for your losses if you do not contact us regarding your issue faced during booking.</string>
    <string name="payment_content6">Once the payment is made and the booking is confirmed, you cannot make any changes in the order. Kindly read the details of the event and eligibility before making the booking. We are not liable to make any refund for tickets purchased.\nIf the event gets cancelled by the organizers of the event, we will refund the amount as per the policy of the organizer. If in case the organizer changes the event date, we will contact you and proceed as per the policy of the organizer.\nHeyla App may, in its discretion, attempt to mediate such dispute, however, we will have no liability for an Organizer’s failure to give refunds, our failure to mediate a dispute; or our decision if it does mediate the dispute.</string>
    <string name="payment_content7">If there are any queries regarding your order, you can get in touch with us at <a href="mailto:hello@heylaapp.sg">hello@heylaapp.sg </a> / 9443471551. We assure you a response within one business day.</string>
    <string name="payment_content8">This Pricing Policy was last updated on 08.09.2018. From time to time we may change or make additions to our Pricing Policy. We will notify you of any material changes to this policy as required by law. We will also post an updated copy on our website and during app updates.</string>
    <string name="terms_heading">Acceptance of Terms</string>
    <string name="terms_heading1">Privacy Policy</string>
    <string name="terms_heading2">Services</string>
    <string name="terms_heading3">Restrictions on use</string>
    <string name="terms_heading4">Changes on Terms &amp; Conditions</string>
    <string name="terms_heading5">Contact Us</string>
    <string name="terms_content">The HeylaApp is a one stop platform for all your event needs, which is owned and operated by Happy Sanz Tech. #28, Bukit Pasoh Road, Singapore 089842.\n\nThrough our platforms, mobile apps and website, Heyla enables its users to view and share events and book tickets for events in  Singapore. This User Agreement (Agreement) sets out the terms and conditions on which Heyla will provide the services to the User through its Website and App.\n\nThe usage of the Website/App is offered to users conditioned on acceptance without modification, of all the terms, conditions and notices contained in this Agreement, as may be posted on the Website/App from time to time. For the removal of doubts, it is clarified that the use of the Website/App by the User constitutes an acknowledgement and acceptance by the User of this Agreement.\n\nHeylaApp reserves the right to change the terms &amp; conditions and notices under which the Services are offered through Website/ App, including but not limited to the Services provided through the Website/App. The User shall be responsible for regularly reviewing these terms and conditions.</string>
    <string name="terms_content1">The User hereby consents, expresses and agrees that he/she has read and fully understood the Privacy Policy of Helya in respect to the website/app. The User further confirms that the terms and contents of such Privacy Policy are acceptable to him/her.-</string>
    <string name="terms_content2">Users are entitled to make use of the services including viewing, and sharing of events. Heyla also lets users book their tickets or register for events through the app. Heyla reserves the right to modify the nature of its services. It also lets the organizers to post their events.\n\nIf the users are booking their tickets through our platform, they hereby consent, express and agree that they have read and fully understood the Pricing Policy of Heyla in respect to the website/app. The User further confirms that the terms of such Pricing Policy are acceptable to him/her.</string>
    <string name="terms_content3">Your use of the website/app is restricted to viewing information of events, booking tickets, giving suggestions or raising queries or complaints. To protect our website, app and other users, we reserve all the rights to delete any content from the website/app. We also reserve the right to restrict the access of the website/app to certain users.</string>
    <string name="terms_content4">These terms &amp; conditions were last updated on 08.09.2018. From time to time we may change or make additions to our terms &amp; Conditions. We will notify you of any material changes to this policy as required by law. We will also post an updated copy on our website and during app updates.</string>
    <string name="terms_content5">If there is any query regarding the terms &amp; conditions, you may contact us at hello@heylaapp.sg / +91 9443471551</string>
</resources>