<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appColorBase"
            android:minHeight="60dp" />

        <ImageView
            android:id="@+id/back_res"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:minHeight="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="15dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/tvtitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/back_res"
            android:fontFamily="@font/muli"
            android:gravity="center_vertical|left"
            android:minHeight="60dp"
            android:padding="5dp"
            android:text="@string/payment_heading"
            android:textColor="@color/white"
            android:textSize="@dimen/actionbarTextSize"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:justificationMode="inter_word"
                android:text="@string/payment_content"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading1"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:visibility="gone"
                android:text="@string/payment_content1"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading2"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:visibility="gone"
                android:text="@string/payment_content2"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading3"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:visibility="gone"
                android:text="@string/payment_content3"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading4"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:justificationMode="inter_word"
                android:fontFamily="@font/muli"
                android:text="@string/payment_content4"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading5"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:text="@string/payment_content5"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading6"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/muli"
                android:justificationMode="inter_word"
                android:text="@string/payment_content6"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading7"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:layout_marginRight="10dp"
                android:justificationMode="inter_word"
                android:text="@string/payment_content7"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/payment_heading8"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/muli"
                android:justificationMode="inter_word"
                android:text="@string/payment_content8"
                android:textColor="@color/text_black"
                android:textSize="14sp" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>