<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img_verification"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:src="@drawable/ic_verification_code" />

            <TextView
                android:id="@+id/code_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_verification"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/verificationcode"
                android:textColor="@color/appColorBase"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/code_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/entercodetxt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.palprotech.heylaapp.customview.CustomOtpEditText
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:inputType="number"
                android:textColor="@color/text_black"
                app:otp="" />

            <RelativeLayout
                android:id="@+id/txtresend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otp_view"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/contentresend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didntrecievecode" />

                <TextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/contentresend"
                    android:text="@string/resend"
                    android:textColor="@color/appColorBase" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtresend"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/sendcode"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_sign_in"
                    android:text="@string/confirm"
                    android:textColor="@color/colour_pick" />

                <Button
                    android:id="@+id/changenumber"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/button_sign_in"
                    android:text="@string/changenumber"
                    android:textColor="@color/colour_pick" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>